# pet-adorable-life

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  app.py  db.py  docker-compose.yml  model_connector.py  pet_model_config.py  pyproject.toml  requirements-e2e.txt
docs/: CONTRIBUTING.md  RUNBOOK.md
docs/plans/: 2026-02-28-docker-compose-optimization-design.md  2026-02-28-multi-pet-design.md  2026-02-28-multi-pet.md  2026-03-01-calendar-view-design.md  2026-03-01-calendar-view.md
mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql_data/#innodb_redo/: #ib_redo9
mysql_data/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql_data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  (+95 more)
templates/: base.html  diary.html  index.html  login.html  organize.html  organize_edit.html  pets.html  product_analyze.html  register.html
tests/: conftest.py  helpers.py  test_api_diaries.py  test_api_pets.py  test_api_products.py  test_app_pages.py  test_auth.py  test_db_diaries.py  test_db_pets.py  test_db_products.py  test_db_schema.py  test_db_users.py  test_model_connector.py
(+10 files in other folders)
