[project]
name = "pet-adorable-life"
version = "0.1.0"
description = ""
authors = [
    {name = "una"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "tenacity (>=9.1.4)"
]


[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
pytest-playwright = ">=0.5.0"
playwright = ">=1.40.0"
requests = ">=2.31.0"

[tool.pytest.ini_options]
# Default test paths (unit + integration only — no E2E):
#   pytest tests/
#
# E2E tests require a live docker-compose stack and are kept separate:
#   pytest tests/e2e/ --base-url http://localhost:5001
#
# To exclude E2E from normal runs:
#   pytest tests/ --ignore=tests/e2e
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that require a live server (run with --base-url http://localhost:5001)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
